<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name">We Go</string>
    <string name="groove_title">Goals</string>
    <string name="groove_your_goal">Your goal</string>
    <string name="groove_category_a11y"><g example="Exercise" id="category_name">%1$s</g> category, examples: <g example="Run, do yoga, get your body moving" id="example">%2$s</g>, button.</string>
    <string name="groove_category_build_skill_cook_something_new">Cook something new</string>
    <string name="groove_category_build_skill_description">Learn a language, practice an instrument</string>
    <string name="groove_category_build_skill_hone_carpentry_skills">Hone carpentry skills</string>
    <string name="groove_category_build_skill_learn_a_knot">Learn a knot</string>
    <string name="groove_category_build_skill_learn_an_instrument_question">What instrument?</string>
    <string name="groove_category_build_skill_learn_instrument">Practice an instrument</string>
    <string name="groove_category_build_skill_learn_new_software">Learn new software</string>
    <string name="groove_category_build_skill_learn_to_code">Learn to code</string>
    <string name="groove_category_build_skill_learn_to_drive">Learn to drive</string>
    <string name="groove_category_build_skill_learn_to_fly">Learn to fly</string>
    <string name="groove_category_build_skill_make_art">Make art</string>
    <string name="groove_category_build_skill_make_art_question">What type?</string>
    <string name="groove_category_build_skill_practice_language">Learn a language</string>
    <string name="groove_category_build_skill_practice_language_question">What language?</string>
    <string name="groove_category_build_skill_practice_photography">Practice photography</string>
    <string name="groove_category_build_skill_question">Which skill?</string>
    <string name="groove_category_build_skill_sing">Sing</string>
    <string name="groove_category_build_skill_title">Build a skill</string>
    <string name="groove_category_exercise_bike">Bike</string>
    <string name="groove_category_exercise_description">Run, do yoga, get your body moving</string>
    <string name="groove_category_exercise_hike">Hike</string>
    <string name="groove_category_exercise_play_badminton">Play badminton</string>
    <string name="groove_category_exercise_play_baseball">Play baseball</string>
    <string name="groove_category_exercise_play_basketball">Play basketball</string>
    <string name="groove_category_exercise_play_soccer">Play soccer</string>
    <string name="groove_category_exercise_play_tennis">Play tennis</string>
    <string name="groove_category_exercise_question">Which exercise?</string>
    <string name="groove_category_exercise_rock_climb">Rock climb</string>
    <string name="groove_category_exercise_run">Run</string>
    <string name="groove_category_exercise_swim">Swim</string>
    <string name="groove_category_exercise_title">Exercise</string>
    <string name="groove_category_exercise_walk">Walk</string>
    <string name="groove_category_exercise_wiggle_ears">Wiggle ears</string>
    <string name="groove_category_exercise_work_out">Work out</string>
    <string name="groove_category_exercise_yoga">Do yoga</string>
    <string name="groove_category_friends_and_family_bbq">Have a BBQ</string>
    <string name="groove_category_friends_and_family_call_dad">Call Dad</string>
    <string name="groove_category_friends_and_family_call_mom">Call Mom</string>
    <string name="groove_category_friends_and_family_description">Make time for those who matters most</string>
    <string name="groove_category_friends_and_family_dinner_with_friends">Get dinner with friends</string>
    <string name="groove_category_friends_and_family_meal_with_family">Eat with family</string>
    <string name="groove_category_friends_and_family_plan_a_date">Plan a date</string>
    <string name="groove_category_friends_and_family_plan_a_reunion">Plan a reunion</string>
    <string name="groove_category_friends_and_family_plan_family_vacation">Plan family vacation</string>
    <string name="groove_category_friends_and_family_play_board_game">Play a board game</string>
    <string name="groove_category_friends_and_family_question">Which activity?</string>
    <string name="groove_category_friends_and_family_reach_out">Reach out to a friend</string>
    <string name="groove_category_friends_and_family_title">Family &amp; friends</string>
    <string name="groove_category_friends_and_family_visit_family">Visit family</string>
    <string name="groove_category_friends_and_family_walk_the_dog">Walk the dog</string>
    <string name="groove_category_me_time_cook">Cook</string>
    <string name="groove_category_me_time_description">Read, meditate, take care of yourself</string>
    <string name="groove_category_me_time_get_a_massage">Get a massage</string>
    <string name="groove_category_me_time_hobby">Personal hobby</string>
    <string name="groove_category_me_time_hobby_question">What hobby?</string>
    <string name="groove_category_me_time_journal">Journal</string>
    <string name="groove_category_me_time_lie_in_a_hammock">Lie in a hammock</string>
    <string name="groove_category_me_time_meditate">Meditate</string>
    <string name="groove_category_me_time_pray">Pray</string>
    <string name="groove_category_me_time_question">Which activity?</string>
    <string name="groove_category_me_time_read">Read</string>
    <string name="groove_category_me_time_sit_in_the_grass">Sit in the grass</string>
    <string name="groove_category_me_time_take_a_nap">Take a nap</string>
    <string name="groove_category_me_time_take_a_selfie">Take a selfie</string>
    <string name="groove_category_me_time_take_the_boat_out">Take the boat out</string>
    <string name="groove_category_me_time_title">Me time</string>
    <string name="groove_category_me_time_watch_movie">Watch a movie</string>
    <string name="groove_category_organize_buy_groceries">Buy groceries</string>
    <string name="groove_category_organize_clean_the_house">Clean the house</string>
    <string name="groove_category_organize_clear_email_inbox">Clear email inbox</string>
    <string name="groove_category_organize_do_finances">Do finances</string>
    <string name="groove_category_organize_do_laundry">Do laundry</string>
    <string name="groove_category_organize_life_chores">Do chores</string>
    <string name="groove_category_organize_life_clean">Clean</string>
    <string name="groove_category_organize_life_description">Stay on top of things</string>
    <string name="groove_category_organize_life_plan_my_day">Plan the day</string>
    <string name="groove_category_organize_life_question">Which activity?</string>
    <string name="groove_category_organize_life_title">Organize my life</string>
    <string name="groove_category_organize_make_a_todo_list">Make a to-do list</string>
    <string name="groove_category_organize_plan_the_week">Plan the week</string>
    <string name="groove_category_organize_study">Study</string>
    <string name="groove_category_screen_description">Viewing goal categories</string>
    <string name="groove_category_selection_description">Choose one and Calendar will schedule time for it</string>
    <string name="groove_category_selection_title">Goals learn from your routine</string>
    <string name="groove_frequency_five_times_per_week">5 times a week</string>
    <string name="groove_frequency_one_time_per_week">Once a week</string>
    <string name="groove_frequency_three_times_per_week">3 times a week</string>
    <string name="tab_trip">Trip</string>
    <string name="tab_search">Search</string>
    <string name="tab_profile">Profile</string>
    <string name="transition_designer_news_login" translatable="false">transition_designer_news_login</string>
    <string name="landmark_details_call_label">Call</string>
    <string name="landmark_details_directions_label">Directions</string>
    <string name="landmark_details_website_label">Website</string>
    <string name="restaurants_filter_ui_choose_time_and_day">Choose time and day</string>
    <string name="restaurants_filter_ui_done">Done</string>
    <string name="close_button_label">Close</string>
    <string name="restaurants_day_of_the_week">Day of the week</string>
    <string name="restaurants_day_of_the_week_menu">Tap to pick a day</string>
    <string name="restaurants_duration_afternoon">Afternoon</string>
    <string name="restaurants_duration_full_day">Full day</string>
    <string name="restaurants_duration_morning">Morning</string>
    <string name="get_accounts_permission_primer_message">Autocomplete email addresses</string>
    <string name="username">Tên đăng nhập</string>
    <string name="password">Mật khẩu</string>
    <string name="preferences_general_title">Calendar view setting</string>
    <string name="preferences_theme">Theme</string>
    <string name="preferences_reminder_title">Notifications \u0026 reminders</string>
    <string name="preferences_hide_declined_title">Hide declined events</string>
    <string name="preferences_week_start_day_title">Week starts on</string>
    <string name="preferences_week_start_day_dialog">Week starts on</string>
    <string name="preferences_week_start_day_default">-1</string>
    <string name="preferences_days_per_week_title">Days per week</string>
    <string name="preferences_days_per_week_dialog">Days per week</string>
    <string name="preferences_days_per_week_default">7</string>
    <string name="preferences_clear_search_history_title">Clear search history</string>
    <string name="preferences_clear_search_history_summary">Remove all the searches you\'ve performed</string>
    <string name="preferences_alerts_title">Notifications</string>
    <string name="preferences_alerts_vibrateWhen_title">Vibrate</string>
    <string name="preferences_alerts_ringtone_title">Sound</string>
    <string name="preferences_alerts_popup_title">Pop-up notification</string>
    <string name="preferences_default_reminder_title">Default reminder time</string>
    <string name="preferences_default_reminder_dialog">Default reminder time</string>
    <string name="preferences_default_reminder_default">10</string>
    <string name="preferences_use_home_tz_title">Use home time zone</string>
    <string name="preferences_use_home_tz_descrip">Displays calendars and event times in your home time zone when traveling</string>
    <string name="preferences_home_tz_title">Home time zone</string>
    <string name="preferences_home_tz_default">America/Los_Angeles</string>
    <string name="preferences_show_week_num_title">Show week number</string>
    <string name="tardis">TARDIS</string>
    <string name="preferences_reminders_category">Reminders</string>
    <string name="preferences_reminders_responded_label">Skip Reminders</string>
    <string name="preferences_reminders_responded_dialog">Skip Reminders</string>
    <string name="preferences_reminders_quiet_hours_label">Quiet hours</string>
    <string name="preferences_reminders_quiet_hours_description">Silence event reminders during specified time.</string>
    <string name="preferences_reminders_quiet_hours_start">Quiet hours start time</string>
    <string name="preferences_reminders_quiet_hours_end">Quiet hours end time</string>
    <string name="preferences_debug_category">Debugging</string>
    <string name="copy_db">Send database</string>
    <string name="do_not_check">Do NOT check -></string>
    <string name="winter_login">Log in to Winter</string>
    <string name="sign_up">Sign up</string>
    <string name="login_action">Log in</string>
    <string name="sign_out">Sign out</string>
    <string name="not_now">Not now</string>
    <string name="dialog_sign_out_content">All saved events, seat reservations and session ratings (if an attendee) remain synced to your account.</string>
    <string name="dialog_sign_out_title">Sign out?</string>
</resources>