<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:key="preferences_debug_category"
        android:title="@string/preferences_debug_category">
        <Preference
            android:key="preferences_copy_db"
            android:title="@string/copy_db" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="preferences_reminders_category"
        android:title="@string/preferences_reminders_category">
        <ListPreference
            android:dialogTitle="@string/preferences_reminders_responded_dialog"
            android:entries="@array/preferences_skip_reminders_labels"
            android:entryValues="@array/preferences_skip_reminders_values"
            android:key="preferences_reminders_responded"
            android:title="@string/preferences_reminders_responded_label" />
        <CheckBoxPreference
            android:key="preferences_reminders_quiet_hours"
            android:summary="@string/preferences_reminders_quiet_hours_description"
            android:title="@string/preferences_reminders_quiet_hours_label" />
        <Preference
            android:dependency="preferences_reminders_quiet_hours"
            android:key="preferences_reminders_quiet_hours_start"
            android:summary="10:00pm"
            android:title="@string/preferences_reminders_quiet_hours_start" />
        <Preference
            android:dependency="preferences_reminders_quiet_hours"
            android:key="preferences_reminders_quiet_hours_end"
            android:summary="08:00am"
            android:title="@string/preferences_reminders_quiet_hours_end" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="preferences_tardis_category"
        android:title="@string/tardis">
        <CheckBoxPreference
            android:key="preferences_tardis_1"
            android:title="@string/do_not_check" />
    </PreferenceCategory>
</PreferenceScreen>