<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/preferences_general_title">
        <ListPreference
            android:defaultValue="light"
            android:entries="@array/pref_theme_entries"
            android:entryValues="@array/pref_theme_values"
            android:key="pref_theme"
            android:title="@string/preferences_theme" />
        <ListPreference
            android:defaultValue="-2"
            android:entries="@array/default_start_entries"
            android:entryValues="@array/default_start_values"
            android:key="preferences_default_start"
            android:title="@string/default_start_title" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="preferences_hide_declined"
            android:title="@string/preferences_hide_declined_title" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="preferences_show_week_num"
            android:title="@string/preferences_show_week_num_title" />
        <ListPreference
            android:defaultValue="@string/preferences_week_start_day_default"
            android:dialogTitle="@string/preferences_week_start_day_dialog"
            android:entries="@array/preferences_week_start_day_labels"
            android:entryValues="@array/preferences_week_start_day_values"
            android:key="preferences_week_start_day"
            android:title="@string/preferences_week_start_day_title" />
        <ListPreference
            android:defaultValue="@string/preferences_days_per_week_default"
            android:dialogTitle="@string/preferences_days_per_week_dialog"
            android:entries="@array/preferences_days_per_week_labels"
            android:entryValues="@array/preferences_days_per_week_values"
            android:key="preferences_days_per_week"
            android:title="@string/preferences_days_per_week_title" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="preferences_home_tz_enabled"
            android:summary="@string/preferences_use_home_tz_descrip"
            android:title="@string/preferences_use_home_tz_title" />
        <Preference
            android:defaultValue="@string/preferences_home_tz_default"
            android:dependency="preferences_home_tz_enabled"
            android:key="preferences_home_tz"
            android:title="@string/preferences_home_tz_title" />
        <PreferenceScreen
            android:key="preferences_clear_search_history"
            android:summary="@string/preferences_clear_search_history_summary"
            android:title="@string/preferences_clear_search_history_title" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="preferences_alerts_category"
        android:title="@string/preferences_reminder_title">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="preferences_alerts"
            android:title="@string/preferences_alerts_title" />

        <RingtonePreference
            android:defaultValue="content://settings/system/notification_sound"
            android:key="preferences_alerts_ringtone"
            android:layout="?android:attr/preferenceLayoutChild"
            android:ringtoneType="notification"
            android:title="@string/preferences_alerts_ringtone_title" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="preferences_alerts_vibrate"
            android:layout="?android:attr/preferenceLayoutChild"
            android:title="@string/preferences_alerts_vibrateWhen_title" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="preferences_alerts_popup"
            android:layout="?android:attr/preferenceLayoutChild"
            android:title="@string/preferences_alerts_popup_title" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="preferences_custom_snooze_delay"
            android:summaryOff="@string/preferences_alerts_custom_snooze_delay_summary_off"
            android:summaryOn="@string/preferences_alerts_custom_snooze_delay_summary_on"
            android:title="@string/preferences_alerts_custom_snooze_delay_title" />

        <ListPreference
            android:defaultValue="@string/preferences_default_snooze_delay_default"
            android:dialogTitle="@string/preferences_default_snooze_delay_dialog"
            android:entryValues="@array/preferences_default_snooze_delay_values"
            android:key="preferences_default_snooze_delay"
            android:title="@string/preferences_default_snooze_delay_title" />

        <ListPreference
            android:defaultValue="@string/preferences_default_reminder_default"
            android:dialogTitle="@string/preferences_default_reminder_dialog"
            android:entries="@array/preferences_default_reminder_labels"
            android:entryValues="@array/preferences_default_reminder_values"
            android:key="preferences_default_reminder"
            android:title="@string/preferences_default_reminder_title" />
<!--
        <PreferenceScreen
            android:fragment="com.android.calendar.QuickResponseSettings"
            android:key="preferences_quick_responses"
            android:summary="@string/quick_response_settings_summary"
            android:title="@string/quick_response_settings" />-->
    </PreferenceCategory>

</PreferenceScreen>
