<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="dismiss">

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="@dimen/spacing_large"
        android:layout_marginStart="@dimen/spacing_large"
        android:background="@drawable/dialog_background"
        android:clickable="true"
        android:elevation="@dimen/z_fab"
        android:orientation="vertical"
        android:paddingBottom="@dimen/padding_normal"
        android:paddingEnd="@dimen/padding_dialog"
        android:paddingStart="@dimen/padding_normal"
        android:paddingTop="@dimen/padding_dialog"
        android:transitionName="@string/transition_designer_news_login">

        <com.winter.dreamhub.widget.BaselineGridTextView
            android:id="@+id/dialog_title"
            style="@style/Widget.Winter.DialogTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dialog_title_spacing"
            android:layout_marginStart="@dimen/spacing_normal"
            android:text="@string/winter_login" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/username_float_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_micro"
            app:hintTextAppearance="@style/TextAppearance.FloatLabelHint">

            <AutoCompleteTextView
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:inputType="textEmailAddress"
                android:selectAllOnFocus="true"
                android:textColorHighlight="@color/accent_blue" />

        </android.support.design.widget.TextInputLayout>

        <CheckBox
            android:id="@+id/permission_primer"
            style="@style/Winter.HintCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_normal"
            android:text="@string/get_accounts_permission_primer_message" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/password_float_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_micro"
            app:hintTextAppearance="@style/TextAppearance.FloatLabelHint">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:selectAllOnFocus="true" />

        </android.support.design.widget.TextInputLayout>

        <FrameLayout
            android:id="@+id/actions_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_normal">

            <Button
                android:id="@+id/signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/sign_up"
                android:textColor="@color/google_blue_highlight"
                style="?android:borderlessButtonStyle" />

            <Button
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:enabled="false"
                android:text="@string/login_action"
                android:background="@color/google_blue_highlight"
                android:textAppearance="@style/TextAppearance.DarkButton" />

        </FrameLayout>

        <include layout="@layout/loading" />

    </LinearLayout>

</FrameLayout>
