<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Widget.Winter.Dialog"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_normal"
        android:layout_marginTop="@dimen/margin_large"
        android:paddingLeft="@dimen/margin_large"
        android:paddingRight="@dimen/margin_large"
        android:text="@string/dialog_sign_out_title"
        android:textAppearance="@style/TextAppearance.Winter.DialogTitle" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_normal"
        android:layout_marginTop="@dimen/spacing_normal"
        android:paddingLeft="@dimen/margin_large"
        android:paddingRight="@dimen/margin_large"
        android:text="@string/dialog_sign_out_content"
        android:textAppearance="@style/TextAppearance.Winter.DialogContent" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/not_now"
            style="@style/Widget.Winter.BorderlessButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_normal"
            android:layout_marginStart="@dimen/margin_large"
            android:layout_marginTop="@dimen/margin_normal"
            android:text="@string/not_now"
            android:textColor="@color/indigo"/>

        <Button
            android:id="@+id/sign_out"
            style="@style/Widget.Winter.RaisedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_normal"
            android:layout_marginEnd="@dimen/margin_large"
            android:layout_marginStart="@dimen/spacing_normal"
            android:layout_marginTop="@dimen/margin_normal"
            android:text="@string/sign_out"
            android:background="@color/indigo"/>
    </LinearLayout>
</LinearLayout>